# nengin

./: .gitignore  README.md  nengin.py  nengin.pyi  pong.py  pyproject.toml
examples/: pong.py
nengin/: __init__.py  _generic.py  _test.py  glnengin.py  glng.py  ng.py
nengin/docs/: index.md
nengin/examples/: flappy.py  jumper.py  pong.py
tests/: drawparity.py
