[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nengin_ImNotMeAnymore"
description = "Object Oriented Wrapper for pygame-ce"

requires-python = ">=3.13"
dependencies = ["pygame-ce>=2.5.0"]
#TODO: check compat with older versions
readme = "README.md"
license = "LGPL-2.1"
classifiers = [
	"Framework :: Pygame-ce",
	"Programming Language :: Python :: 3",
]
dynamic = ["version"]